<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicCalculatorActivity">

    <TextView
        android:id="@+id/txtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/num1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/num2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editN1" />

    <EditText
        android:id="@+id/editN1"
        android:layout_width="178dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtn1" />

    <EditText
        android:id="@+id/editN2"
        android:layout_width="175dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"

        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editN1" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operation_spinner" />

    <TextView
        android:id="@+id/lblresult"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="221dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="78dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operation_spinner" />

    <Spinner
        android:id="@+id/operation_spinner"
        android:layout_width="112dp"
        android:layout_height="31dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOperacion" />

    <TextView
        android:id="@+id/txtOperacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/operation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editN2" />
</androidx.constraintlayout.widget.ConstraintLayout>